--- a/orangehrm-quick-start-guide.html
+++ b/orangehrm-quick-start-guide.html
@@ -15,7 +15,7 @@
         text-align: center;
         height: 8rem;
         margin: 0 auto;
-        background: url(logo.png) no-repeat;
+        background: url(bluelogo.png) no-repeat;
 		background-size: contain;
         background-position: center;
       }
